@@ -7,6 +7,7 @@ Version 1.5.3 - xx xxx 2011
   * Make sure that SearchResultSet::GetColumn doesn't attempt to use 
     an empty string.
   * Apply patches provided by Matthew Schultz.
+  * Default to BOOST_FILESYSTEM_3 and boost 1.44 or later. Ticke #166.
 
 Version 1.5.2 - 11 Feb 2011
   
